[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Phone/NotificationDot.png" type="Texture" id=1]
[ext_resource path="res://UI/Phone/FreeClinic2.png" type="Texture" id=2]
[ext_resource path="res://UI/Phone/Wallpaper.png" type="Texture" id=3]
[ext_resource path="res://UI/Phone/Frame.png" type="Texture" id=4]
[ext_resource path="res://UI/Phone/TextMessage.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Phone.gd" type="Script" id=6]
[ext_resource path="res://UI/Vitals/Energy.png" type="Texture" id=7]
[ext_resource path="res://UI/Vitals/HP.png" type="Texture" id=8]
[ext_resource path="res://UI/Vitals/Vitals.png" type="Texture" id=9]
[ext_resource path="res://UI/Font/Pixel_Font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scripts/Vitals.gd" type="Script" id=11]
[ext_resource path="res://UI/Phone/FreeClinic1.png" type="Texture" id=12]
[ext_resource path="res://UI/Phone/Backarrow.png" type="Texture" id=13]
[ext_resource path="res://UI/Phone/BossMessage.png" type="Texture" id=14]
[ext_resource path="res://UI/Phone/TextScreen.png" type="Texture" id=15]

[node name="UI" type="CanvasLayer"]

[node name="Vitals" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vital_Texture" type="TextureRect" parent="Vitals"]
margin_right = 61.0
margin_bottom = 103.0
rect_min_size = Vector2( 122, 206 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Time_Label" type="Label" parent="Vitals/Vital_Texture"]
margin_left = 28.0
margin_top = 4.0
margin_right = 122.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 10 )
text = "24:00AM"
__meta__ = {
"_edit_lock_": true
}

[node name="HP" type="TextureProgress" parent="Vitals/Vital_Texture"]
margin_left = 2.0
margin_top = 44.0
margin_right = 10.0
margin_bottom = 124.0
value = 25.0
texture_progress = ExtResource( 8 )
fill_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Energy" type="TextureProgress" parent="Vitals/Vital_Texture"]
margin_left = 20.0
margin_top = 44.0
margin_right = 36.0
margin_bottom = 204.0
value = 25.0
texture_progress = ExtResource( 7 )
fill_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Phone" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="Phone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -256.0
margin_right = 160.0
margin_bottom = 256.0
texture = ExtResource( 4 )

[node name="Wall_Paper" type="TextureRect" parent="Phone/Frame"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextMessage" type="TextureButton" parent="Phone/Frame/Wall_Paper"]
margin_left = 24.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 88.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="Phone/Frame/Wall_Paper/TextMessage"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Phone/Frame/Wall_Paper/TextMessage/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "3"
align = 1
valign = 1

[node name="Contacts" type="TextureRect" parent="Phone/Frame"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )

[node name="BackArrow" type="TextureButton" parent="Phone/Frame/Contacts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -262.0
margin_bottom = -462.0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Phone/Frame/Contacts"]
margin_left = 58.0
margin_top = 18.0
margin_right = 300.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 10 )
text = "Contacts"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contacts" type="VBoxContainer" parent="Phone/Frame/Contacts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 52.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss" type="Button" parent="Phone/Frame/Contacts/Contacts"]
margin_right = 280.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 10 )
text = "The Boss"

[node name="Clinic" type="Button" parent="Phone/Frame/Contacts/Contacts"]
margin_top = 30.0
margin_right = 280.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 10 )
text = "Free Clinic"

[node name="Messages" type="TextureRect" parent="Phone/Frame"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )

[node name="BackArrow" type="TextureButton" parent="Phone/Frame/Messages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 18.0
margin_right = -262.0
margin_bottom = -462.0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Phone/Frame/Messages"]
margin_left = 58.0
margin_top = 18.0
margin_right = 300.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 10 )
text = "The Boss"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMessages" type="VBoxContainer" parent="Phone/Frame/Messages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 52.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss" type="TextureRect" parent="Phone/Frame/Messages/TextMessages"]
visible = false
margin_right = 280.0
margin_bottom = 124.0
texture = ExtResource( 14 )

[node name="Clinic1" type="TextureRect" parent="Phone/Frame/Messages/TextMessages"]
visible = false
margin_top = 128.0
margin_right = 280.0
margin_bottom = 218.0
texture = ExtResource( 12 )

[node name="Clinic2" type="TextureRect" parent="Phone/Frame/Messages/TextMessages"]
visible = false
margin_top = 222.0
margin_right = 280.0
margin_bottom = 324.0
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = -14.0
margin_right = 42.0
margin_bottom = 20.0
text = "Victory"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Phone/Frame/Wall_Paper/TextMessage" to="Phone" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Phone/Frame/Contacts/BackArrow" to="Phone" method="_on_BackArrow_pressed"]
[connection signal="pressed" from="Phone/Frame/Contacts/Contacts/Boss" to="Phone" method="_on_Boss_pressed"]
[connection signal="pressed" from="Phone/Frame/Contacts/Contacts/Clinic" to="Phone" method="_on_Clinic_pressed"]
[connection signal="pressed" from="Phone/Frame/Messages/BackArrow" to="Phone" method="_on_BackArrow_pressed"]
[connection signal="pressed" from="Control/Button" to="Phone" method="_on_Button_pressed"]
